--- a/css-course/layouts/index.html
+++ b/css-course/layouts/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-$END$
+<div class="container">
+    <header class="header"> Header </header>
+    <main class="main"> Content </main>
+    <div class="sidebar left"> Sidebar </div>
+    <div class="sidebar right"> Sidebar </div>
+    <footer class="footer"> Footer </footer>
+</div>
 </body>
+
 </html>
